@@ -1,3 +1,4 @@
+Fluid-flow: Fixed: Shouldn't be able to drag pipe control points within a threshold distance of each other
 Fluid-flow: Added images for dropper and bucket
 Fluid-flow: Added a ruler
 Fluid-flow: Moved reset all button to bottom right so it doesn't overlap the pipe
